# fastapi-drive

./: .gitignore  Dockerfile  Makefile  main.py  pyproject.toml  ruff.toml
alembic/: env.py
api/: crud.py  schemas.py  utils.py  views.py
core/: config.py
docker/: docker-compose.app.yaml  docker-compose.deploy.yaml  docker-compose.dev.yaml
models/: __init__.py  files.py  helpers.py
src/: config.py  main.py  schemas.py  utils.py
src/api/: file_storage.py
src/services/: s3_client.py
src/services/base/: base_s3_client.py
