[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["theandrunique <theandrusyper@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiofiles = "^23.2.1"
aiobotocore = "^2.13.0"
fastapi = {extras = ["uvicorn"], version = "^0.111.0"}
pydantic-settings = "^2.3.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
